// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`dependency on workspace without version in package.json: version: * 1`] = `
"{
  "format": "v2",
  "meta_hash": "1e2d5fa6591f007aa6674495d1022868fc3b60325c4a1555315ca0e16ef31c4e",
  "package_index": {
    "lodash": 1,
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "*",
          "npm": {
            "name": "lodash",
            "version": ">=0.0.0"
          },
          "resolved_id": 1,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *.*.* 1`] = `
"{
  "format": "v2",
  "meta_hash": "1e2d5fa6591f007aa6674495d1022868fc3b60325c4a1555315ca0e16ef31c4e",
  "package_index": {
    "lodash": 1,
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "*.*.*",
          "npm": {
            "name": "lodash",
            "version": ">=0.0.0"
          },
          "resolved_id": 1,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: latest 1`] = `
"{
  "format": "v2",
  "meta_hash": "1e2d5fa6591f007aa6674495d1022868fc3b60325c4a1555315ca0e16ef31c4e",
  "package_index": {
    "lodash": 1,
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "latest",
          "dist_tag": {
            "name": "lodash",
            "tag": "lodash"
          },
          "resolved_id": 1,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version:  1`] = `
"{
  "format": "v2",
  "meta_hash": "1e2d5fa6591f007aa6674495d1022868fc3b60325c4a1555315ca0e16ef31c4e",
  "package_index": {
    "lodash": 1,
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "",
          "dist_tag": {
            "name": "lodash",
            "tag": "lodash"
          },
          "resolved_id": 1,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: =* 1`] = `
"{
  "format": "v2",
  "meta_hash": "1e2d5fa6591f007aa6674495d1022868fc3b60325c4a1555315ca0e16ef31c4e",
  "package_index": {
    "lodash": 1,
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "=*",
          "npm": {
            "name": "lodash",
            "version": ">=0.0.0"
          },
          "resolved_id": 1,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: kjwoehcojrgjoj 1`] = `
"{
  "format": "v2",
  "meta_hash": "1e2d5fa6591f007aa6674495d1022868fc3b60325c4a1555315ca0e16ef31c4e",
  "package_index": {
    "lodash": 1,
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "kjwoehcojrgjoj",
          "dist_tag": {
            "name": "lodash",
            "tag": "lodash"
          },
          "resolved_id": 1,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *.1.* 1`] = `
"{
  "format": "v2",
  "meta_hash": "1e2d5fa6591f007aa6674495d1022868fc3b60325c4a1555315ca0e16ef31c4e",
  "package_index": {
    "lodash": 1,
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "*.1.*",
          "npm": {
            "name": "lodash",
            "version": ">=0.0.0"
          },
          "resolved_id": 1,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *-pre 1`] = `
"{
  "format": "v2",
  "meta_hash": "1e2d5fa6591f007aa6674495d1022868fc3b60325c4a1555315ca0e16ef31c4e",
  "package_index": {
    "lodash": 1,
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "*-pre",
          "npm": {
            "name": "lodash",
            "version": ">=0.0.0"
          },
          "resolved_id": 1,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: 1 1`] = `
"{
  "format": "v2",
  "meta_hash": "56c714bc8ac0cdbf731de74d216134f3ce156ab45adda065fa84e4b2ce349f4b",
  "package_index": {
    "lodash": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "1",
          "npm": {
            "name": "lodash",
            "version": "<2.0.0 >=1.0.0"
          },
          "resolved_id": 3,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "npm 1.3.1",
      "dependencies": {},
      "integrity": "sha512-F7AB8u+6d00CCgnbjWzq9fFLpzOMCgq6mPjOW4+8+dYbrnc0obRrC+IHctzfZ1KKTQxX0xo/punrlpOWcf4gpw==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: 1.* 1`] = `
"{
  "format": "v2",
  "meta_hash": "56c714bc8ac0cdbf731de74d216134f3ce156ab45adda065fa84e4b2ce349f4b",
  "package_index": {
    "lodash": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "1.*",
          "npm": {
            "name": "lodash",
            "version": "<2.0.0 >=1.0.0"
          },
          "resolved_id": 3,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "npm 1.3.1",
      "dependencies": {},
      "integrity": "sha512-F7AB8u+6d00CCgnbjWzq9fFLpzOMCgq6mPjOW4+8+dYbrnc0obRrC+IHctzfZ1KKTQxX0xo/punrlpOWcf4gpw==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: 1.1.* 1`] = `
"{
  "format": "v2",
  "meta_hash": "56ec928a6d5f1d18236abc348bc711d6cfd08ca0a068bfc9fda24e7b22bed046",
  "package_index": {
    "lodash": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "1.1.*",
          "npm": {
            "name": "lodash",
            "version": "<1.2.0 >=1.1.0"
          },
          "resolved_id": 3,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "npm 1.1.1",
      "dependencies": {},
      "integrity": "sha512-SFeNKyKPh4kvYv0yd95fwLKw4JXM45PJLsPRdA8v7/q0lBzFeK6XS8xJTl6mlhb8PbAzioMkHli1W/1g0y4XQQ==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: 1.1.1 1`] = `
"{
  "format": "v2",
  "meta_hash": "56ec928a6d5f1d18236abc348bc711d6cfd08ca0a068bfc9fda24e7b22bed046",
  "package_index": {
    "lodash": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "1.1.1",
          "npm": {
            "name": "lodash",
            "version": "==1.1.1"
          },
          "resolved_id": 3,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "npm 1.1.1",
      "dependencies": {},
      "integrity": "sha512-SFeNKyKPh4kvYv0yd95fwLKw4JXM45PJLsPRdA8v7/q0lBzFeK6XS8xJTl6mlhb8PbAzioMkHli1W/1g0y4XQQ==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *-pre+build 1`] = `
"{
  "format": "v2",
  "meta_hash": "13e05e9c7522649464f47891db2c094497e8827d4a1f6784db8ef6c066211846",
  "package_index": {
    "lodash": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "*-pre+build",
          "npm": {
            "name": "lodash",
            "version": ">=0.0.0"
          },
          "resolved_id": 3,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "npm 4.17.21",
      "dependencies": {},
      "integrity": "sha512-v2kDEe57lecTulaDIuNTPy3Ry4gLGJ6Z1O3vE1krgXZNrsQ+LFTGHVxVjcXPs17LhbZVGedAJv8XZ1tvj5FvSg==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on workspace without version in package.json: version: *+build 1`] = `
"{
  "format": "v2",
  "meta_hash": "13e05e9c7522649464f47891db2c094497e8827d4a1f6784db8ef6c066211846",
  "package_index": {
    "lodash": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "*+build",
          "npm": {
            "name": "lodash",
            "version": ">=0.0.0"
          },
          "resolved_id": 3,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "npm 4.17.21",
      "dependencies": {},
      "integrity": "sha512-v2kDEe57lecTulaDIuNTPy3Ry4gLGJ6Z1O3vE1krgXZNrsQ+LFTGHVxVjcXPs17LhbZVGedAJv8XZ1tvj5FvSg==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0"
  }
}"
`;

exports[`dependency on same name as workspace and dist-tag: with version 1`] = `
"{
  "format": "v2",
  "meta_hash": "13e05e9c7522649464f47891db2c094497e8827d4a1f6784db8ef6c066211846",
  "package_index": {
    "lodash": [
      1,
      3
    ],
    "foo": 0,
    "bar": 2
  },
  "packages": [
    {
      "id": 0,
      "name": "foo",
      "name_hash": "14841791273925386894",
      "resolution": "root ",
      "dependencies": {
        "bar": {
          "literal": "packages/bar",
          "workspace": "packages/bar",
          "resolved_id": 2,
          "behavior": "workspace"
        },
        "lodash": {
          "literal": "packages/mono",
          "workspace": "packages/mono",
          "resolved_id": 1,
          "behavior": "workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "local",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 1,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "workspace workspace:packages/mono",
      "dependencies": {},
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 2,
      "name": "bar",
      "name_hash": "11592711315645265694",
      "resolution": "workspace workspace:packages/bar",
      "dependencies": {
        "lodash": {
          "literal": "latest",
          "dist_tag": {
            "name": "lodash",
            "tag": "lodash"
          },
          "resolved_id": 3,
          "behavior": "normal | workspace"
        }
      },
      "integrity": null,
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    },
    {
      "id": 3,
      "name": "lodash",
      "name_hash": "15298228331728003776",
      "resolution": "npm 4.17.21",
      "dependencies": {},
      "integrity": "sha512-v2kDEe57lecTulaDIuNTPy3Ry4gLGJ6Z1O3vE1krgXZNrsQ+LFTGHVxVjcXPs17LhbZVGedAJv8XZ1tvj5FvSg==",
      "man_dir": "",
      "origin": "npm",
      "bin": null,
      "scripts": {}
    }
  ],
  "workspace_paths": {
    "11592711315645265694": "packages/bar",
    "15298228331728003776": "packages/mono"
  },
  "workspace_versions": {
    "11592711315645265694": "1.0.0",
    "15298228331728003776": "4.17.21"
  }
}"
`;
